# DimeBox

./: .gitignore  DEPLOYMENT.md  PRD.md  README.md  gemini.md  vercel.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/routers/: items.py  outfits.py  tags.py  trips.py
backend/app/tests/: conftest.py  test_items.py  test_outfits.py  test_tags.py  test_trips.py
database/: schema.sql
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ItemCard.tsx  ItemModal.tsx  Navbar.tsx  QuestModal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Auth.tsx  Dashboard.tsx  Gear.tsx  Profile.tsx  Wardrobe.tsx  Wishlist.tsx
frontend/src/utils/: apiClient.ts  durability.ts  harmony.ts  supabaseClient.ts
